--- a/js01.html
+++ b/js01.html
@@ -9,7 +9,8 @@
     <button onclick="showMessage()">คลิกที่นี่!</button>
     <script>
       // ฟังก์ชันสำหรับแสดง alert 
-      function showMessage() { alert("สวัสดีครับ/ค่ะ!"); }
+      function showMessage() { alert("สวัสดีครับ/ค่ะ!"); 
+      }
     </script>
   </body>
 </html>
