--- a/js13.html
+++ b/js13.html
@@ -1,4 +1,4 @@
-<!-- ตัวอย่างที่ 13: รายการซอของ ื้ (Shopping List) -->
+<!-- ตัวอย่างที่ 13: รายการซื้ออของ (Shopping List) -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
