เครื่องคิดเลขพื้นฐาน

--- a/js14.html
+++ b/js14.html
@@ -1,4 +1,4 @@
-<!-- ตัวอย่างที่ 14: นาฬกาดิจิตอล ิ (Digital Clock) -->
+<!-- ตัวอย่างที่ 14: นาฬิกาดิจิตอล (Digital Clock) -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
